my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EINTPTRTYPE/EINTPTRTYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINTPTRTYPE.dml:6:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINTPTRTYPE.dml:12:1: error EINTPTRTYPE: illegal pointer type: pointer to uint48
